select/grammar.txt
STATEMENT -> SELECT_STATEMENT
SELECT_STATEMENT -> SELECT COLUMN_NAME FROM TABLE_NAME WHERE CONDITION |
  SELECT COLUMN_NAME FROM TABLE_NAME
COLUMN_NAME -> * | COLUMNS
COLUMNS -> COLNAME | COLUMNS, COLNAME
COLNAME -> <>
TABLE_NAME -> <>

CONDITION -> STRING_COND | NUM_COND | DATE_COND |
  !(STRING_COND) | !(NUM_COND) | !(DATE_COND) |

STRING_COND -> STRING_EXP LIKE STRING_EXP |
  STRING_EXP NOT LIKE STRING_EXP | STRCMP(STRING_EXP, STRING_EXP)
STRING_EXP -> COLNAME | REGEX
REGEX -> \'.*\'

NUM_COND -> NUM_EXP COMPARISON_OP NUM_EXP |
  NUM_EXP BETWEEN NUM_EXP AND NUM_EXP |
  NUM_EXP IS NOT NULL | NUM_EXP IS NULL

NUM_EXP -> INT_VAL ARITHMETIC_OP INT_VAL | INT_VAL
INT_VAL -> NUM_LITERAL | COLNAME
NUM_LITERAL -> -?[0-9]+(\.[0-9]+)?

DATE_COND -> DATE_EXP COMPARISON_OP DATE_EXP | DATE_EXP
DATE_EXP -> DATE_FUNCTION | DATE_LITERAL
DATE_FUNCTION -> ADDDATE(DATE_EXP, DATE_EXP) |
  CURDATE() | CURRENT_DATE() | CURRENT_DATE |
  DATE_DIFF(DATE_EXP, DATE_EXP) |
  DAY(DATE_EXP) | DAYNAME(DATE_EXP) | DAYOFMONTH(DATE_EXP) |
  DAYOFWEEK(DATE_EXP) | DAYOFYEAR(DATE_EXP) | LAST_DAY(DATE_EXP) |
  MAKEDATE(NUM_EXP, NUM_EXP) | MONTH(DATE_EXP) | MONTHNAME() |
  SUBDATE(DATE_EXP, INTERVAL NUM_EXP DATE_UNIT) | YEAR(DATE_EXP)

DATE_UNIT -> SECOND | MINUTE | DAY | WEEK | MONTH |
  QUARTER | YEAR

COMPARISON_OP -> = | <=> | > | >= | < | <= | != | <>
ARITHMETIC_OP -> + | - | * | / | DIV | % | MOD

E -> E + F | E - F | F
F -> F * T | F / T | T
T -> (E) | V
V
